# EPROG_SS21

./: CMakeLists.txt  README.md
series00/: gewinn.c  helloworld.c  rechteck.c
series01/: bsp7.c  floor.c  handy.c  kreis.c  member.c  polyeval.c  scalarproduct.c  trapezoid.c
series02/: bilanz.c  bsp8.c  locate.c  members.c  points.c  pythagoras.c  rounding.c  triangle.c  triangle02.c
series03/: binomial.c  binomial03.c  fibbonacci.c  money.c  papercut.c  product.c  scanfpositive.c  triangle.c
series04/: binomial.c  check.c  cross.c  frobeniusnorm.c  kgv.c  pirecursive.c  pnorm.c  sqrt_new.c
series05/: energy  energy.c  makefile  maxcompare  maxcompare.c  pascal  pascal.c  sarrus  sarrus.c  square  square.c  squareVec  squareVec.c  swap  swap.c  zeitmessung  zeitmessung.c
series06/: anagram.c  bubblesort.c  cut.c  makefile  mathvec.c  mathvec.h  merge.c  mergesort.c  minmaxmean.c  roman.c
series07/: bisection.c  datum.c  datum.h  diff.c  makefile  matrix.c  matrix.h  quicksort.c  trapezoidal.c
series08/: dec2bin.c  dec2float.c  float2dec.c  makefile  polynomial.c  squarematrix.c  squarematrix.h
series09/: customer.cpp  customer.h  fraction.cpp  fraction.h  name.cpp  name.h  triangle.cpp  triangle.h  university.cpp  university.h
series10/: IntVector.cpp  IntVector.h  factorization.cpp  factorization.h  gdcAndlmc.cpp  gdcAndlmc.h  matrix.cpp  matrix.h
series11/: fraction.cpp  fraction.h  fractionVector.cpp  fractionVector.h  uppertriangularmatrix.cpp  uppertriangularmatrix.h
series12/: minsort.cpp  polygon.cpp  polygon.h  polynomial.cpp  polynomial.h  (+1 more)
