cmake_minimum_required(VERSION 3.17)
project(EPROG_SS21 C)

set(CMAKE_C_STANDARD 99)

add_executable(EPROG_SS21 series00/helloworld.c series00/rechteck.c series01/kreis.c series00/gewinn.c series01/trapezoid.c series01/polyeval.c series01/handy.c series01/scalarproduct.c series01/member.c series01/floor.c series01/bsp7.c)