cmake_minimum_required(VERSION 3.17)
project(EPROG_SS21 C)

set(CMAKE_C_STANDARD 99)

add_executable(EPROG_SS21 series00/helloworld.c series00/rechteck.c series01/kreis.c series00/gewinn.c series01/trapezoid.c series01/polyeval.c series01/handy.c series01/scalarproduct.c series01/member.c series01/floor.c series01/bsp7.c series02/bilanz.c series02/triangle02.c series02/members.c series02/locate.c series02/points.c series02/rounding.c series02/pythagoras.c series02/bsp8.c series03/triangle.c series03/money.c)